# cdpp-workflows

./: README.md  compose.sh  create_env.sh  docker-compose.backend.yaml  docker-compose.yaml  env.template
.github/workflows/: main.yaml
cwl/: extract_tissue.cwl  tissue_segmentation_workflow.cwl
data/dags/: basic_pipeline.py  pca_classification_cwl.py  pca_pipeline.py  pipeline.py  tissue_segmentation_cwl.py  utils.py
promort_config/: config.yaml.template
scripts/: create_user.py  init.sh
scripts/promort/: 81_create_user.sh
scripts/prov_crate/: Dockerfile  gen_crate.py  requirements.txt
scripts/prov_crate/tests/: run.sh
scripts/prov_crate/tests/data/: metadata.yaml  params.json
scripts/prov_crate/tests/expected_output/: Mirax2-Fluorescence-2  Mirax2-Fluorescence-2.mrxs  pca_classification_workflow.cwl  ro-crate-metadata.json
scripts/workflow_ro_crate/: PCA_README.md  TISSUE_README.md  gen_crates.py  requirements.txt
slide-importer/: pyproject.toml
slide-importer/slide_importer/: local.py
slide-importer/tests/: test_slide_importer.py
tests/: integration.sh
