[tool.poetry]
name = "slide-importer"
version = "0.1.0"
description = ""
authors = ["Mauro Del Rio <mauro@crs4.it>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
clize = "^4.1.1"
pytz = "^2021.1"

[tool.poetry.dev-dependencies]
pytest = "8.3.5"
responses = "^0.18.0"


[tool.poetry.group.dev.dependencies]
pytest = "8.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
